fix(security): 修复极端情况下外部资源本地化功能可能带来的ssrf攻击风险
修复极端情况下外部资源本地化功能可能带来的ssrf攻击风险